<resources>
    <string name="app_name">Dropbox Upload Manager</string>

    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_addTask">Add Task</string>
    <string name="title_action_add_file">Add File</string>

    <string name="tab_label_1">Pending</string>
    <string name="tab_label_2">Completed</string>

    <string name="textInput_hint_name">Name</string>
    <string name="textInput_hint_description">Description</string>

    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>

    <string name="notification_message">Uploading</string>
    <string name="channel_name">channel 1</string>
    <string name="channel_description">notification channel</string>

</resources>
